# CyberSecurity-Platform

./: .coverage  .env  .env.secure  README.md  alembic.ini  build-workers.sh  cleanup_container.sh  completed.txt  docker-compose.yml  pyproject.toml  pytest.ini  quick_guide.txt  requirements.txt  run_trace.sh  setup.sh  test_cleanup_workers.py  test_docker_workers.py  test_worker_lifecycle.py  workflow.txt
.github/workflows/: cd.yml  ci.yml
alembic/: env.py
docker/api/: Dockerfile  Dockerfile.secure
docker/seccomp/: api-profile.json
docker/workers/base/: Dockerfile
docker/workers/llm/: Dockerfile.secure
docker/workers/ml/: Dockerfile.secure
docker/workers/nmap/: Dockerfile  entrypoint.sh
docs/compliance/soc2/: controls.md
docs/operations/runbooks/: api-high-error-rate.md
infrastucture/kubernetes/base/: deployment.yaml  worker.yaml
infrastucture/kubernetes/policies/: require-labels.yaml
infrastucture/monitoring/prometheus/: prometheus.yml
infrastucture/service-mesh/istio/: gateway.yaml
kubernetes/: api-development.yaml  ml-worker-deployment.yml
project_details/: completed.txt  enpoints.txt  quick_api.txt  tool_workflow.txt  trace.txt  workflow.txt
scripts/: build-all.sh  build-tools.sh  deploy-k8.sh  monitor.sh  run.sh
scripts/backup/: database-backup.sh
scripts/chaos_engineering/: run-chaos.sh
scripts/deployment/: deploy.sh
scripts/disaster-recovery/: failover.sh
scripts/testing/: smoke-test.sh
src/: app.py
src/agents/: base_agent.py  discovery.py
src/agents/collaboration/: memory_bus.py
src/agents/planner/: llm_factory.py  planner_agent.py  prompt_templates.py
src/agents/verifier/: capability_validator.py  dag_validator.py  resource_validator.py  verifier_agent.py
src/ai/: feature_store.py  model_manager.py  training_pipeline.py
src/api/: app.py  dependencies.py
src/api/middleware/: audit.py  auth.py  correlation.py  encryption.py  rate_limit.py
src/autonomous/: adaptive_scanner.py  auto_scaler.py  priority_engine.py  self_healing.py
src/core/: config.py  exceptions.py  security.py
src/domain_agents/: base_domain_agent.py  recon_agent.py  scanner_agent.py
src/gateway/: api_gateway.py
src/governance/: masking.py  retention.py
src/knowledge_graph/: casual_inference.py  graph_enhancer.py  pattern_discovery.py  similarity_learner.py
src/memory/: graph_store.py  memory_service.py  time_series_store.py  vector_store.py
src/models/: dag.py
src/monitoring/: alerting.py  anomaly_detection.py  slo_tracking.py
src/observability/: logging.py  metrics.py  profiling.py  telemetry.py  tracing.py
src/orchestrator/: agent_orchestrator.py  communication_bus.py  state_manager.py
src/predictive/: resource_predictor.py  risk_scorer.py  vulnerability_predictor.py
src/recommendation/: parameter_optimizer.py  tool_recommender.py
src/recovery/: circuit_breaker.py  escalation_manager.py  fallback_manager.py  retry_manager.py
src/reporting/: report_engine.py
src/scheduler/: budget_tracker.py  hybrid_scheduler.py  lifecycle_manager.py  quota_manager.py  task_context.py
src/security/: abac.py  compliance.py  data_classification.py  rbac.py  secrets.py
src/services/: audit.py
src/tenant/: tenant_manager.py
src/tools/: __init__.py  cost_tracker.py  rate_limiter.py  tool_cache.py  tool_discovery.py  tool_registration.py  tool_registry.py  tool_router.py
src/utils/: __init__.py  cost_calculator.py  logging.py  metrics.py  token_counter.py  validators.py
src/workers/: container.py  network_manager.py  resource_monitor.py  worker_pool.py
src/workflow/: approval_workflow.py  conditional_branching.py  sla_manager.py  task_assignment.py  workflow_engine.py
tests/: conftest.py  run_all_tests.py  run_all_tests.sh  test_mlflow.db
tests/chaos/: test_resilence.py
tests/integration/: test_api_integration.py  test_full_workflow.py
tests/performance/: locusfile.py  test_load_scaling.py
tests/security/: test_auth.py
(+72 files in other folders)
