[tool.poetry]
name = "enterprise-security-orchestrator"
version = "1.0.0"
description = "Enterprise-grade security orchestration platform"
authors = ["Your Name <email@example.com>"]
license = "Proprietary"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
# Web Framework
fastapi = { version = "^0.104.0", extras = ["all"] }
uvicorn = { version = "^0.24.0", extras = ["standard"] }
pydantic = { version = "^2.5.0", extras = ["email"] }
pydantic-settings = "^2.1.0"

# Database
asyncpg = "^0.29.0"
sqlalchemy = "^2.0.0"
alembic = "^1.12.0"
redis = { version = "^5.0.0", extras = ["hiredis"] }
motor = "^3.3.0"  # MongoDB async driver

# Security
python-jose = { version = "^3.3.0", extras = ["cryptography"] }
passlib = { version = "^1.7.4", extras = ["bcrypt"] }
cryptography = "^41.0.0"
pyotp = "^2.9.0"
qrcode = "^7.4.0"
python-multipart = "^0.0.6"

# Rate Limiting
limits = "^3.6.0"

# Observability
opentelemetry-api = "^1.21.0"
opentelemetry-sdk = "^1.21.0"
opentelemetry-exporter-otlp = "^1.21.0"
opentelemetry-instrumentation-fastapi = "^0.42b0"
prometheus-client = "^0.19.0"
python-json-logger = "^2.0.0"

# Message Queue
celery = "^5.3.0"
aio-pika = "^9.3.0"

# Utils
httpx = "^0.25.0"
tenacity = "^8.2.0"
croniter = "^1.4.0"
python-dotenv = "^1.0.0"
email-validator = "^2.1.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-asyncio = "^0.21.0"
pytest-cov = "^4.1.0"
black = "^23.11.0"
isort = "^5.12.0"
flake8 = "^6.1.0"
mypy = "^1.7.0"
pre-commit = "^3.5.0"
httpx = "^0.25.0"
faker = "^19.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ['py311']

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true