[tool.poetry]
name = "axr"
version = "1.0.0"
description = "Enterprise Security Orchestrator"
authors = ["Abhishek <idiot@gmail.com>"]

# ===== CORE DEPENDENCIES (For API Container) =====
[tool.poetry.dependencies]
python = "^3.11"
# Web Framework
fastapi = "^0.104.0"
uvicorn = "^0.24.0"
# Data Validation
pydantic = "^2.4.0"
pydantic-settings = "^2.0.0"
# Database
asyncpg = "^0.29.0"
sqlalchemy = "^2.0.0"
alembic = "^1.12.0"
redis = "^5.0.0"
# Docker
docker = "^6.1.0"
# HTTP Clients
httpx = "^0.25.0"
aiohttp = "^3.9.0"
# Auth & Security
python-jose = "^3.3.0"
passlib = "^1.7.4"
bcrypt = "^4.0.0"
cryptography = "^41.0.0"
python-multipart = "^0.0.6"
# Monitoring
prometheus-client = "^0.18.0"
opentelemetry-api = "^1.21.0"
opentelemetry-sdk = "^1.21.0"
opentelemetry-instrumentation-fastapi = "^0.42b0"
# Utils
tenacity = "^8.2.0"
python-dotenv = "^1.0.0"

# ===== ML DEPENDENCIES (For ML Worker Container) =====
[tool.poetry.group.ml]
optional = true

[tool.poetry.group.ml.dependencies]
tensorflow = "^2.13.0"
xgboost = "^2.0.0"
scikit-learn = "^1.3.0"
mlflow = "^2.5.0"
scipy = "^1.11.0"
numpy = "^1.24.0"
pandas = "^2.0.0"
joblib = "^1.3.0"

# ===== LLM DEPENDENCIES (For LLM Worker Container) =====
[tool.poetry.group.llm]
optional = true

[tool.poetry.group.llm.dependencies]
openai = "^1.0.0"
anthropic = "^0.7.0"
langchain = "^0.1.0"
transformers = "^4.35.0"
torch = "^2.1.0"
sentence-transformers = "^2.2.0"

# ===== REPORTING DEPENDENCIES (Optional) =====
[tool.poetry.group.reporting]
optional = true

[tool.poetry.group.reporting.dependencies]
weasyprint = "^60.0"
jinja2 = "^3.1.0"
markdown = "^3.5.0"
reportlab = "^4.0.0"

# ===== DEVELOPMENT DEPENDENCIES =====
[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-asyncio = "^0.21.0"
pytest-cov = "^4.1.0"
black = "^23.0"
isort = "^5.12.0"
flake8 = "^6.1.0"
mypy = "^1.5.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"